tests/transpiler/x/fs/json_builtin.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/json_builtin.fs(8,1): error FS0039: The value or constructor 'json' is not defined
